# plushie-python

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  index.html  justfile  mise.toml  mkdocs.yml  objects.inv  preflight  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
accessibility/: index.html
app/: index.html
cli/: index.html
commands/: index.html
composition-patterns/: index.html
docs/: README.md  accessibility.md  app.md  cli.md  commands.md  composition-patterns.md  effects.md  events.md  extensions.md  getting-started.md  index.md  layout.md  running.md  scoped-ids.md  standalone.md  testing.md  theming.md  tutorial.md  versioning.md
docs/guides/: 01-introduction.md  02-getting-started.md  03-your-first-app.md  04-the-development-loop.md  05-events.md  06-lists-and-inputs.md  07-layout.md  08-styling.md  09-animation.md  10-subscriptions.md  11-async-and-effects.md  12-canvas.md  13-custom-widgets.md  14-state-management.md  15-testing.md  16-shared-state.md  17-wasm-deployment.md
docs/reference/: accessibility.md  animation.md  app-lifecycle.md  built-in-widgets.md  canvas.md  cli-commands.md  commands.md  composition-patterns.md  configuration.md  custom-widgets.md  events.md  packaging-and-distribution.md  python-typing.md  scoped-ids.md  standalone-packaging.md  subscriptions.md  testing.md  themes-and-styling.md  versioning.md  windows-and-layout.md  wire-protocol.md
docs/stewardship/: README.md  concurrency-shape.md  dsl-discipline.md  elm-invariants.md  goals-and-non-goals.md  performance-bar.md  posture.md  resilience.md  simplicity.md  test-discipline.md  triage.md  trust-model.md
docs/stewardship/roadmap/: README.md
effects/: index.html
events/: index.html
examples/: README.md  async_fetch.py  catalog.py  clock.py  color_picker.py  counter.py  notes.py  rate_plushie.py  shortcuts.py  todo.py
examples/widgets/: __init__.py  color_picker_widget.py  star_rating.py  theme_toggle.py
extensions/: index.html
getting-started/: index.html
layout/: index.html
running/: index.html
scoped-ids/: index.html
scripts/: verify_doc_tests.py
search/: search_index.json
src/plushie/: __init__.py  __main__.py  _gitignore.py  animation.py  app.py  binary.py  canvas.py  canvas_widget.py  cargo_plushie.py  commands.py  connection.py  data.py  dev_server.py  diagnostics.py  effects.py  events.py  extension.py  framing.py  keys.py  native_widget.py  package.py  protocol.py  renderer_build.py  route.py  runtime.py  script.py  selection.py  state.py  subscriptions.py  transport.py  tree.py  types.py  ui.py  undo.py  widget.py
src/plushie/animation/: __init__.py  easing.py  sequence.py  spring.py  transition.py  tween.py
src/plushie/testing/: __init__.py  element.py  fixture.py  plugin.py  pool.py  screenshot.py  tree_hash.py  widget_case.py
src/plushie/tree/: __init__.py  _types.py  a11y.py  diff.py  normalize.py  search.py
standalone/: index.html
testing/: index.html
tests/: conftest.py  test_animation.py  test_binary.py  test_canvas.py  test_canvas_widget.py  test_cargo_plushie.py  test_cli.py  test_commands.py  test_connection.py  test_data.py  test_dev_server.py  test_diagnostics.py  test_effects.py  test_events.py  test_extension.py  test_framing.py  test_gitignore_warning.py  test_package_manifest.py  test_protocol.py  test_pyproject_config.py  test_renderer_build.py  test_renderer_env.py  test_route.py  test_runtime.py  test_screenshot.py  test_script.py  test_selection.py  test_state.py  test_subscriptions.py  test_testing.py  test_transport.py  test_tree.py  test_tree_hash.py  test_types.py  test_ui.py  test_undo.py
tests/docs/: test_accessibility_doc.py  test_app_doc.py  test_commands_doc.py  test_composition_doc.py  test_effects_doc.py  test_events_doc.py  test_getting_started.py  test_layout_doc.py  test_readme.py  test_running_doc.py  test_scoped_ids_doc.py  test_testing_doc.py  test_theming_doc.py  test_tutorial.py
tests/integration/: test_async_fetch.py  test_catalog.py  test_clock.py  test_color_picker.py  test_counter.py  test_notes.py  test_rate_plushie.py  test_shortcuts.py  test_todo.py
theming/: index.html
tutorial/: index.html
