[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plushie"
version = "0.1.0"
description = "Native desktop GUI framework for Python, powered by iced"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Daniel Hedlund" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "msgpack>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plushie"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length (formatter handles it)
]

[tool.ruff.lint.isort]
known-first-party = ["plushie"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "headless: requires headless backend (real rendering, no display)",
    "windowed: requires windowed backend (real windows, needs display)",
]

[project.entry-points.pytest11]
plushie = "plushie.testing.plugin"

[project.scripts]
plushie = "plushie.__main__:main"
