[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plushie"
version = "0.1.0"
description = "Native desktop GUI framework for Python, powered by iced"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Daniel Hedlund" },
]
keywords = ["gui", "desktop", "iced", "elm", "plushie", "native", "cross-platform"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Framework :: Pytest",
]
dependencies = [
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pyright>=1.1",
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-htmlproofer-plugin>=1.5",
    "interrogate>=1.7",
    "build>=1.0",
    "twine>=6.0",
]

[project.urls]
Homepage = "https://github.com/plushie-ui/plushie-python"
Documentation = "https://plushie-ui.github.io/plushie-python"
Repository = "https://github.com/plushie-ui/plushie-python"
Changelog = "https://github.com/plushie-ui/plushie-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/plushie-ui/plushie-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plushie"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length (formatter handles it)
]

[tool.ruff.lint.isort]
known-first-party = ["plushie"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src", "tests", "examples"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "headless: requires headless backend (real rendering, no display)",
    "windowed: requires windowed backend (real windows, needs display)",
]

[project.entry-points.pytest11]
plushie = "plushie.testing.plugin"

[project.scripts]
plushie = "plushie.__main__:main"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-module = false
fail-under = 95
exclude = ["tests", "examples"]

[tool.coverage.run]
source = ["plushie"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
